--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,11 @@
+.hide {
+  display: none;
+}
 
-button {
+/* button {
   margin: 20px 0px 20px 0px;
   width: 200px;
-}
+} */
 
 .form-control {
   width: 120px;
@@ -10,5 +13,136 @@ button {
 }
 
 #show-listings {
+  display: none;
+}
+
+.portland-vector {
+  position:absolute;
+      top: 300px;
+      left: 200px;
+      z-index: 1;
+  width: 65rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.highlight:hover {
+  transition-duration: 150ms;
+  opacity: .75;
+  fill: lightblue;
+  cursor: crosshair;
+}
+
+
+.small {
+  padding-left: 10px;
+  font-size: 15px;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+.jumbotron {
+  background-color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+input[type=text] {
+  border: 1px solid black;
+  border-radius: 4px;
+}  */
+
+
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+body {
+  display:none;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+}
+
+header {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+}
+
+.content {
+  width: 94%;
+  margin: 4px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.logo {
+  line-height: 60px;
+  float: left;
+  margin: 16px 46px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+}
+
+nav {
+  width: 100%;
+  line-height: 60px;
+}
+
+nav ul {
+  line-height: 60px;
+  list-style: none;
+  background: rgba(0, 0, 0, 0);
+  overflow: hidden;
+  color: #fff;
+  margin: 0;
+  padding-top: 0;
+  padding-left: 730px;
+}
+
+nav.black ul {
+  background: #000;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 6px 20px;;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+}
+
+a:hover {
+  text-decoration: none;
+  color: lightblue;
+}
+
+.cityInfo {
+  display: none;
+}
+
+#neighborhood {
+  z-index: 2;
+  float: right;
+  font-size: 35px;
+  padding-right: 380px;
+  padding-top: 120px;
+}
+
+hr {
+  margin-top: -2px;
+  border-top: 1px solid black;
   display: none;
 }
