--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -133,7 +133,7 @@ a:hover {
   display: none;
 }
 
-#neighborhood {
+#neighborhood{
   z-index: 2;
   float: right;
   font-size: 35px;
@@ -141,8 +141,28 @@ a:hover {
   padding-top: 120px;
 }
 
+#but {
+  font-size: 16px;
+  float: right;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+  font-style:italic;
+}
+
+#but-div {
+  float: right;
+  font-size: 35px;
+  padding-right: 380px;
+  padding-top: 20px;
+  padding-left: 700px;
+}
+
 hr {
   margin-top: -2px;
   border-top: 1px solid black;
   display: none;
+}
+
+#neighbor-show {
+  display:none;
 }
